[ADD] figures and some small improvements

--- a/report/references.bib
+++ b/report/references.bib
@@ -153,7 +153,7 @@
   volume       = {11},
   issn         = {1875-4805},
   doi          = {10.1007/s12369-019-00603-1},
-  abstractnote = {As social robots become more popular, so arises the need for these social agents to operate in environments involving multiple users. The robot control systems that govern these multi-party interactions require to be evaluated both from the technical and social standpoints. This paper presents the methodology, setup and results for experiment involving the social robot EMYS participating in multi-party interaction where pairs of participants interacted with the robot in a trivia questions game lead by the robot . In total 32 people, 16 pairs, interacted with the robot twice, which resulted in 32 interactions and 64 filled questionnaires. The developed robot’s multi-party interaction system was evaluated both in terms of performance and user assessment. The results show that the robot adhering to human turn-taking social norms reduced the number of occurring conversational errors, which improved the communicative performance from $$51.5%$$ to $$80.5%$$, in addition, it made the robot perceived as more communicative, cooperative and fitting user expectations by up to 3 points on a 7 point scale. In addition, the study on repeated interactions revealed that user perception of the robot is affected by subsequent interactions, which can be of consequence in future experiments. This first impression caused lasting effect between 1 and 2 points on user assessment of several robot’s aspects, even when contradicted by objective performance measurement of the robot’s actual behavior.},
+  abstractnote = {As social robots become more popular, so arises the need for these social agents to operate in environments involving multiple users. The robot control systems that govern these multi-party interactions require to be evaluated both from the technical and social standpoints. This paper presents the methodology, setup and results for experiment involving the social robot EMYS participating in multi-party interaction where pairs of participants interacted with the robot in a trivia questions game lead by the robot . In total 32 people, 16 pairs, interacted with the robot twice, which resulted in 32 interactions and 64 filled questionnaires. The developed robot’s multi-party interaction system was evaluated both in terms of performance and user assessment.},
   number       = {5},
   journal      = {International Journal of Social Robotics},
   author       = {Żarkowski, Mateusz},
@@ -193,9 +193,10 @@
   author    = {Cohen, Jacob},
   year      = {1960},
   month     = {Apr},
-  pages     = {37–46},
+  pages     = {37-46},
   language  = {en}
 }
+
 @article{McHugh_2012,
   title        = {Interrater reliability: the kappa statistic},
   volume       = {22},
@@ -216,6 +217,24 @@
   doi     = {10.1007/s10742-011-0077-3},
   journal = {Springer}
 }
-  
-  
->>>>>>> fed5696e108b93b70175904bda10c6aa51823905
+
+@misc{GPT_4_2023,
+  title    = {GPT-4},
+  author   = {OpenAI},
+  url      = {https://openai.com/research/gpt-4},
+  urldate  = {2023-03-30},
+  language = {en-US},
+  year     = {2023}
+}
+
+@article{OpenAI_2023,
+  title        = {GPT-4 Technical Report},
+  url          = {http://arxiv.org/abs/2303.08774},
+  doi          = {10.48550/arXiv.2303.08774},
+  abstractnote = {We report the development of GPT-4, a large-scale, multimodal model which can accept image and text inputs and produce text outputs. While less capable than humans in many real-world scenarios, GPT-4 exhibits human-level performance on various professional and academic benchmarks, including passing a simulated bar exam with a score around the top 10 per cent of test takers. GPT-4 is a Transformer-based model pre-trained to predict the next token in a document. The post-training alignment process results in improved performance on measures of factuality and adherence to desired behavior. A core component of this project was developing infrastructure and optimization methods that behave predictably across a wide range of scales. This allowed us to accurately predict some aspects of GPT-4's performance based on models trained with no more than 1/1,000th the compute of GPT-4.},
+  publisher    = {arXiv},
+  author       = {OpenAI},
+  year         = {2023},
+  month        = {Mar},
+  journal      = {OpenAI}
+}
